--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -61,7 +61,7 @@ h2, %h2 {
 }
 
 h3, %h3 {
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-family: 'GT Walsheim';
   font-weight: bold;
 }
